[build-system]
requires = [
    "flit_core >=3.2,<4"
]
build-backend = "flit_core.buildapi"

[project]
name = "apache_cloudflare_iplist"
readme="README.md"
authors = [
    {name = "James Hodgkinson", email = "james@terminaloutcomes.com"}
]
classifiers = [
    "License :: OSI Approved :: MIT License"
]
dynamic = [
    "version",
    "description"
]

dependencies = [
    "requests >=2.26.0",
    "sudo >=1.0.0",
    "click >=8.0.1"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "mypy",
    "flit"
]

[project.scripts]
apache_cloudflare_iplist = "apache_cloudflare_iplist.__main__:cli"

[project.urls]
Home = "https://github.com/yaleman/apache-cloudflare-iplist"

[tool.flit.sdist]
exclude = [
    "requirements*.txt",
    ".gitignore",
    ".pylintrc"
]